--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "saloonphp/laravel-plugin": "^3.0",
+        "saloonphp/saloon": "^3.0",
+        "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-data": "^4.15",
+        "spatie/laravel-ray": "^1.40",
+        "spatie/laravel-typescript-transformer": "^2.5",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
