--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.33",
+        "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.10.1",
         "saloonphp/laravel-plugin": "^3.0",
         "saloonphp/saloon": "^3.0",
+        "sentry/sentry-laravel": "^4.15",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-data": "^4.15",
         "spatie/laravel-ray": "^1.40",
