--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/horizon": "^5.33",
         "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.10.1",
+        "laravel/wayfinder": "^0.1.12",
         "saloonphp/laravel-plugin": "^3.0",
         "saloonphp/saloon": "^3.0",
         "sentry/sentry-laravel": "^4.15",
